Fix overflow content

--- a/assets/css/base/_utilities.scss
+++ b/assets/css/base/_utilities.scss
@@ -76,6 +76,9 @@
     & > * {
         flex-basis: 50%;
         padding: 1rem;
+        @media (max-width: $sm) {
+            flex-basis: 100%;
+        }
     }
 }
 
@@ -89,6 +92,12 @@
     & > * {
         flex-basis: 33%;
         padding: 1rem;
+        @media (max-width: $md) {
+            flex-basis: 50%;
+        }
+        @media (max-width: $sm) {
+            flex-basis: 100%;
+        }
     }
 }
 
@@ -102,6 +111,12 @@
     & > * {
         flex-basis: 25%;
         padding: 1rem;
+        @media (max-width: $md) {
+            flex-basis: 50%;
+        }
+        @media (max-width: $sm) {
+            flex-basis: 100%;
+        }
     }
 }
 
