--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,6 +191,13 @@ textarea {
   padding: 1rem;
 }
 
+@media (max-width: 576px) {
+  .two-column > * {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+
 .three-column {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -212,6 +219,20 @@ textarea {
   padding: 1rem;
 }
 
+@media (max-width: 768px) {
+  .three-column > * {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+@media (max-width: 576px) {
+  .three-column > * {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+
 .four-column {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -231,6 +252,20 @@ textarea {
   -ms-flex-preferred-size: 25%;
       flex-basis: 25%;
   padding: 1rem;
+}
+
+@media (max-width: 768px) {
+  .four-column > * {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+@media (max-width: 576px) {
+  .four-column > * {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 .w-100 {
